[gd_scene load_steps=12 format=3 uid="uid://bxjt3c5k9h7p2"]

[ext_resource type="TileSet" uid="uid://coexnx00fgtst" path="res://tilesets/basic_tileset.tres" id="1_tileset"]
[ext_resource type="Script" path="res://scripts/Level2.gd" id="2_level_script"]
[ext_resource type="PackedScene" uid="uid://cjxpnh6n5u3ya" path="res://scenes/PauseMenu.tscn" id="3_pause_menu"]
[ext_resource type="PackedScene" uid="uid://cpujq1n83ql3j" path="res://scenes/Player.tscn" id="4_player"]
[ext_resource type="PackedScene" path="res://scenes/Collectible.tscn" id="5_collectible"]
[ext_resource type="PackedScene" uid="uid://coeg0y3w1hffa" path="res://scenes/Goal.tscn" id="6_goal"]
[ext_resource type="Texture2D" uid="uid://cs0p8mv8h6yty" path="res://assets/background_gradient.png" id="7_bg"]
[ext_resource type="PackedScene" path="res://scenes/HUD.tscn" id="8_hud"]
[ext_resource type="PackedScene" path="res://scenes/Hazard.tscn" id="9_hazard"]
[ext_resource type="PackedScene" path="res://scenes/Checkpoint.tscn" id="10_checkpoint"]
[ext_resource type="PackedScene" path="res://scenes/Enemy.tscn" id="11_enemy"]
[ext_resource type="PackedScene" path="res://scenes/MovingPlatform.tscn" id="12_moving_platform"]

[node name="Level2" type="Node2D"]
script = ExtResource("2_level_script")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0)
motion_mirroring = Vector2(1280, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer1"]
position = Vector2(640, 360)
scale = Vector2(5, 5.625)
texture = ExtResource("7_bg")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.4, 0)
motion_mirroring = Vector2(1280, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
modulate = Color(0.7, 0.7, 0.8, 0.5)
position = Vector2(640, 360)
scale = Vector2(4, 4.5)
texture = ExtResource("7_bg")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.6, 0)
motion_mirroring = Vector2(1280, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
modulate = Color(0.5, 0.5, 0.6, 0.3)
position = Vector2(640, 360)
scale = Vector2(3, 3.375)
texture = ExtResource("7_bg")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_tileset")
format = 2
collision_layer = 1
collision_mask = 1

[node name="Player" parent="." instance=ExtResource("4_player")]
position = Vector2(96, 608)

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="Collectible1" parent="." instance=ExtResource("5_collectible")]
position = Vector2(320, 544)

[node name="Collectible2" parent="." instance=ExtResource("5_collectible")]
position = Vector2(576, 480)

[node name="Collectible3" parent="." instance=ExtResource("5_collectible")]
position = Vector2(944, 416)

[node name="Collectible4" parent="." instance=ExtResource("5_collectible")]
position = Vector2(1328, 400)

[node name="Checkpoint1" parent="." instance=ExtResource("10_checkpoint")]
position = Vector2(672, 480)
checkpoint_id = 1

[node name="MovingPlatform1" parent="." instance=ExtResource("12_moving_platform")]
position = Vector2(480, 544)
end_position = Vector2(480, 448)
duration = 3.0

[node name="Hazard1" parent="." instance=ExtResource("9_hazard")]
position = Vector2(768, 688)

[node name="Hazard2" parent="." instance=ExtResource("9_hazard")]
position = Vector2(800, 688)

[node name="Hazard3" parent="." instance=ExtResource("9_hazard")]
position = Vector2(832, 688)

[node name="Enemy1" parent="." instance=ExtResource("11_enemy")]
position = Vector2(1088, 672)
patrol_distance = 256.0

[node name="Enemy2" parent="." instance=ExtResource("11_enemy")]
position = Vector2(1408, 608)
patrol_distance = 192.0

[node name="Goal" parent="." instance=ExtResource("6_goal")]
position = Vector2(1520, 544)

[node name="HUD" parent="." instance=ExtResource("8_hud")]

[node name="PauseMenu" parent="." instance=ExtResource("3_pause_menu")]

[node name="EndMenu" type="CanvasLayer" parent="."]
visible = false

[node name="Dimmer" type="ColorRect" parent="EndMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.65)

[node name="Panel" type="Panel" parent="EndMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -180.0
offset_right = 220.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="EndMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="EndLabel" type="Label" parent="EndMenu/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 1

[node name="ScoreSummary" type="Label" parent="EndMenu/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Score: 000"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="EndMenu/Panel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(220, 48)
layout_mode = 2
text = "Next Level"

[node name="RestartButton" type="Button" parent="EndMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(220, 48)
layout_mode = 2
text = "Restart"

[node name="QuitToMenuButton" type="Button" parent="EndMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(220, 48)
layout_mode = 2
text = "Quit to Menu"

[connection signal="pressed" from="EndMenu/Panel/VBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="EndMenu/Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="EndMenu/Panel/VBoxContainer/QuitToMenuButton" to="." method="_on_quit_to_menu_from_end_pressed"]
